# dhl2

./: .gitignore  README.md  extraccion_facturas.ipynb  main.py  pyproject.toml
docker_dgx-spark/: Dockerfile  README.md  docker-compose.yml  requirements.txt  vl_server.py
