[project]
name = "dhl2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.13",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "openai>=2.45.0",
    "paddleocr>=3.7.0",
    "paddlepaddle>=3.3.1",
    "pandas>=3.0.3",
    "pymupdf>=1.28.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "nbconvert>=7.17.1",
]
